# care-voice

./: .env.example  .gitignore  .mcp.json  BUILD_INSTRUCTIONS.md  CLEANUP_PLAN.md  CONTAINER_GUIDE.md  CONTAINER_MANAGEMENT.md  Cargo_test.toml  DEPLOYMENT_QUICK_START.md  Dockerfile.blackdx_cpu  Dockerfile.blackdx_gpu  Dockerfile.build-env  Dockerfile.cuda_native  Dockerfile.cuda_simple  Dockerfile.enterprise  Dockerfile.final  Dockerfile.gpu_basic  Dockerfile.gpu_optimized  Dockerfile.gpu_python  Dockerfile.gpu_simple  Dockerfile.gpu_simple2  Dockerfile.gpu_test  Dockerfile.gpu_unified  Dockerfile.gpu_working  Dockerfile.minimal_test  Dockerfile.optimized  Dockerfile.rtx50-series  Dockerfile.runtime  Dockerfile.rustflags_static  Dockerfile.simple  Dockerfile.simple_static  Dockerfile.static  Dockerfile.test  Dockerfile.test_static  Dockerfile.unified  Dockerfile.verified_static  Dockerfile.whisper-rs-gpu  Dockerfile.whisper_fix  GPU_DEPLOYMENT_REPORT.md  GPU_FINAL_ANALYSIS_REPORT.md  (+54 more)
.claude/agents/: doc-decision-helper.md  doc_classifier_agent.md  project-doc-manager.md  smart-doc-router.md  system-doc-maintainer.md
.claude/hooks/: doc-lifecycle.js  doc-maintenance.js
archive/containers/: Dockerfile.unified-modern
backend/: Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.minimal  Dockerfile.opus-complete  Dockerfile.opus-simple  Dockerfile.opus-support  Dockerfile.simple  Dockerfile.sync  browser_compatibility_test.py  build_opus_complete.sh  build_opus_support.sh  deploy_opus_fix.sh  performance_benchmark.py  quick_test_opus.sh  test_opus_decoder.rs
backend-sync/: Cargo.toml  Dockerfile
backend-sync/src/: main.rs
backend/.cargo/: config.toml
backend/src/: audio_decoder.rs  audio_format.rs  basic_server.rs  gpu_memory_manager.rs  main.rs  main_minimal.rs  main_simple.rs  main_sync.rs  opus_decoder.rs  sync_server.rs  test_audio_only.rs  test_full.rs  test_model.rs.bak  whisper_model_pool.rs
docs/: AGENT_SYSTEM_ACTIVATION_REPORT.md  ARCHITECTURE.md  DEPLOYMENT.md  DOCUMENTATION_REORGANIZATION_PLAN_20250731.md  PLANS_INDEX.md  PROJECT_TIMELINE.md  QUICK_START.md  README.md  RTX_5070_TI_CUDA_FIX_ACHIEVEMENT.md  RTX_5070_TI_修復歷史紀錄.md  SOP_DEVELOPMENT_WORKFLOW.md  TRADITIONAL_CHINESE_FIX_REPORT.md  TRADITIONAL_CHINESE_STANDARDS.md  WEBCODECS_FIX_SUMMARY.md  WEBCODECS_TECHNICAL_IMPLEMENTATION.md  git-workflow-guide.md
docs/archive/: OPUS_BACKEND_SOLUTION.md  OPUS_IMPLEMENTATION_COMPLETE_REPORT.md
docs/development/: CARE_VOICE_CUDA_UPGRADE_SESSION.md  IMPLEMENTATION_TIMELINE.md  INTEGRATED_ARCHITECTURE_DESIGN.md  OPUS_COMPLETION_PLAN.md  OPUS_IMPLEMENTATION_GUIDE.md  PODMAN_OPUS_CONTAINERIZATION_PLAN.md  deployment-guide.md  environment-setup.md
docs/guides/user/: INTEGRATED_DEPLOYMENT_README.md  doc-decision-helper.md  installation.md
docs/plans/active/: 2025-01-07_1505_計劃自動儲存系統建立.md  2025-01-07_1815_WebCodecs_OPUS_解碼修復計劃.md  2025-08-06_WebCodecs_OPUS_診斷修復計劃.md  2025-08-10_即時語音轉錄實作計劃.md  2025-08-11_關懷專業LLM後處理系統實作計劃.md
docs/plans/completed/: 2025-01-07_1505_計劃自動儲存系統建立.md  2025-08-08_WebCodecs_OPUS_關鍵診斷與修復建議.md  2025-08-10_RTX_5070_Ti_CUDA_修復完成.md  2025-08-10_test-hook-activation.md
docs/plans/templates/: plan_template.md
docs/project/active/: AUDIO_UPLOAD_FIX_PROGRESS.md  CARE_VOICE_CONTAINER_STATUS_OVERVIEW.md  CARE_VOICE_TESTING_PLAN.md  CHINESE_TAIWANESE_OPTIMIZATION_PLAN.md  IMPLEMENTATION_GUIDE.md  OPUS_IMPLEMENTATION_STATUS.md  OPUS_ISSUE_DIAGNOSIS_REPORT.md  README.md  git-status-report.md  performance-guide.md  project-doc-manager.md  troubleshooting.md
docs/project/completed/: CHROME_WEBM_OPUS_FIX_COMPLETION_REPORT.md  WEBCODECS_CHROME_FIX_PLAN.md  WEBCODECS_EMERGENCY_FIX_REPORT.md
docs/system/: ANALYSIS_UPDATE_SUMMARY.md  AUDIO_PROCESSING_ARCHITECTURE.md  BROWSER_AUDIO_RECORDING_ANALYSIS.md  CARE_VOICE_UNIFIED_ENDPOINT_DEPLOYMENT_STATUS.md  CARE_VOICE_V2_2_RELEASE_NOTES.md  DIAGNOSIS_REPORT.md  ENTERPRISE_ARCHITECTURE_RECOVERY_PLAN.md  IMMEDIATE_FIX_GUIDE.md  OPUS_COMPLETE_SOLUTION.md  OPUS_ISSUE_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  PROJECT_ARCHITECTURE_GUIDE.md  RUST_CONCURRENCY_FIX_COMPLETE.md  UNIFIED_ARCHITECTURE_IMPLEMENTATION_REPORT.md  UPLOAD_ENDPOINT_UNIFICATION_COMPLETION_REPORT.md  UPLOAD_ENDPOINT_UNIFICATION_PLAN.md  USER_TEST_GUIDE.md  WEBCODECS_500_ERROR_FIX.md  WEBCODECS_IMPLEMENTATION_PLAN.md  WEBCODECS_OPUS_FIX_COMPLETE.md  WEBCODECS_PERFORMANCE_BENCHMARKS.md  WEBCODECS_QUICK_START.md  WEBM_AUDIO_ANALYSIS.md  doc_classifier_agent.md  gpu-configuration.md  system-doc-maintainer.md
docs/system/templates/: adr-template.md  feature-plan.md
docs/technical/: IMPLEMENTATION_STEPS.md  OPUS_BACKEND_SOLUTION.md  WEBM_SOLUTION_PLAN.md  architecture.md  gpu-configuration.md  system-status.md
docs/user-guide/: quick-start.md  troubleshooting.md
frontend/: Dockerfile  Dockerfile.build  index.html  nginx-standalone.conf  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.tsx
frontend_dist/html/: index.html
frontend_dist/html/assets/: index-BbzRfEus.js
k8s/: deployment.yaml  namespace.yaml
projects/completed/care-voice-enterprise-v030/: ENTERPRISE_UPGRADE_SUMMARY.md
projects/completed/integrated-architecture-v20/: INTEGRATED_ARCHITECTURE_FINAL_SUMMARY.md
qdrant_data/: meta.json
qdrant_data/collection/memories/: storage.sqlite
scripts/: enterprise-model-manager.sh
test-static/: Cargo.toml
test-static/src/: main.rs
tools/benchmarks/: benchmark_whisper.py
tools/diagnostics/: gpu_diagnostics_whisper_rs.py
