[package]
name = "care-voice"
version = "0.2.0"
edition = "2021"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 語音識別
whisper-rs = { version = "0.13", features = ["cuda"] }

# 音頻處理 (添加 Opus 支援)
opus = { version = "0.3.0", optional = true }
symphonia = { version = "0.5", features = [
    "mkv",          # WebM/Matroska 容器支援
    "vorbis",       # Vorbis 編解碼器 (Firefox WebM)
    "ogg",          # OGG 容器格式支援
    "flac",         # FLAC 無損格式支援 (可選)
    "wav"           # WAV 格式支援
] }

# WAV 檔案處理
hound = "3.5"

# OGG 容器支援
ogg = "0.9.0"

# 音頻樣本處理工具
byteorder = "1.4"

# 錯誤處理
anyhow = "1.0"
thiserror = "1.0"

# 日誌和時間
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# 記憶體分配器 (可選，針對性能優化)
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5", optional = true }

[features]
default = ["opus-support"]
jemalloc = ["jemallocator"]
opus-support = ["opus"]
cuda = ["whisper-rs/cuda"]